<resources>
    <string name="app_name">Boost</string>
    <string name="cancel">Cancel</string>
    <string name="sign_in">sign in</string>
    <string name="sign_up"><u>Sign up?</u></string>
    <string name="boost">Boost</string>
    <string-array name="userType">
        <item>Rider</item>
        <item>Driver</item>
    </string-array>
    <string name="title_activity_rider_main_page">Map</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="phoneHint">###-###-####</string>
    <string name="call_user_title">Call User</string>
    <string name="send_message_button">Send Message</string>
    <string name="to">To:</string>
    <string name="subject_hint">Subject</string>
    <string name="enter_message_hint">Enter message</string>
    <string name="send_button_text">send</string>
</resources>
